<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="text_home">Home</string>
    <string name="display_score">0</string>
    <string name="dec_score">DEC</string>
    <string name="inc_score">INC</string>
    <string name="change1">1 point</string>
    <string name="change2">2 points</string>
    <string name="change3">3 points</string>
    <string name="text_away">Away</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="pref_save">Save</string>
    <string name="title_activity_settings">Settings</string>

    <!--    <string name="round">Rounding</string>-->

    <!--    <string name="round_default">None</string>-->
    <!--    -->
    <!--    <string-array name="round_keys">-->
    <!--        <item>@string/round_default</item>-->
    <!--        <item>Tip</item>-->
    <!--        <item>Total</item>-->
    <!--    </string-array>-->

    <!--    <string-array name="round_values">-->
    <!--        <item>0</item>-->
    <!--        <item>1</item>-->
    <!--        <item>2</item>-->
    <!--    </string-array>-->

</resources>
